@@ -1,3 +1,12 @@
+2011-10-10  Simon J. Gerraty  <sjg@bad.crufty.net>
+
+	* Makefile.in (MAKE_VERSION):  bump version to 20111010
+
+2011-10-09  Simon J. Gerraty  <sjg@bad.crufty.net>
+
+	* boot-strap: check for an expected file in the dirs we look for.
+	* make-bootstrap.sh: pass on LDSTATIC
+
 2011-10-01  Simon J. Gerraty  <sjg@bad.crufty.net>
 
 	* Makefile.in (MAKE_VERSION): bump version to 20111001
